[rd] Added Height % in modal box

--- a/CSS.css
+++ b/CSS.css
@@ -181,7 +181,8 @@ span.usname {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;/* Could be more or less, depending on screen size */
+  height: 70%;
 }
 
 /* The Close Button (x) */
